--- a/src/lib/global.css
+++ b/src/lib/global.css
@@ -4,6 +4,20 @@
 	margin: 0;
 }
 
+@font-face {
+	font-family: 'OCR B Std';
+	src: local('OCR B Std'), url('/fonts/OCRBStd.woff2');
+}
+
+:root {
+	--font-sans: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	--font-mono: 'OCR B Std', monospace;
+}
+
+body {
+	font-family: var(--font-sans);
+}
+
 @media print {
 	body :not(barcode-label *) {
 		display: none;
